<resources>
    <string name="app_name">CodeClash</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms</string>
    <string name="i_agree_to">I agree to </string>
</resources>